Fix aligning dates to the right

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -53,6 +53,7 @@ h4 {
 
 #posts span {
   color: #999;
+  text-align: right;
 }
 
 a {
